fixed spacing for henry

--- a/web/src/styles/hero-home.scss
+++ b/web/src/styles/hero-home.scss
@@ -61,15 +61,19 @@ a.middle:hover:before {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 10px;
+  margin-top: 100px;
+
+  // h2{
+  //   margin-top: 0;
+  // }
 
   @media only screen and (max-width: 650px) {
     margin-top: 100px;
   }
 
-  @media only screen and (max-width: 800px) {
-    margin-top: 50px;
-  }
+  // @media only screen and (max-width: 800px) {
+  //   margin-top: 50px;
+  // }
 
   img {
     max-width: 100%;
